<resources>
    <string name="app_name">eBooks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">eBooks elektron kitapxanası</string>
    <string name="text">eBooks elektron kitapxanasına xosh kelipsiz</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Kiriw</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Parol</string>
    <string name="invalid_conf_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_user_signup">Jańa paydalanıwshı? <b>Dizimnen ótiw</b></string>
    <string name="prompt_name">Atı</string>
    <string name="confirm_password">Paroldı tastıyıqlań</string>
    <string name="action_sign_up">Dizimnen ótiw</string>
</resources>